volexc/tests/ui/parse_service_missing_fn.vol
// Missing fn keyword in service method

message Request {}
message Response {}

service Foo {
    bar(Request) -> Response = 1
}
